# lab08_hw

./: .gitignore  CMakeLists.txt  Dockerfile
.github/workflows/: docker.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: CMakeLists.txt  solver.cpp
